--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,13 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_sign_in">SignInActivity</string>
+
+    <!-- Sign In screen -->
+    <string name="cms_logo">As easiest way to connect with your service provider</string>
+    <string name="cms_signup">Sign Up</string>
+    <string name="cms_text">Existing Users can login below</string>
+    <string name="cms_login">Login</string>
+    <string name="cms_forgetpwd">Forget your password ?</string>
+
 </resources>
