--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,12 @@
     <string name="title_activity_add_vendor_category">AddVendorCategoryActivity</string>
     <string name="title_activity_add_brands">AddBrandsActivity</string>
 
+    <!--Menu Content-->
+    <string-array name="menu">
+        <item>Home</item>
+        <item>Profile</item>
+        <item>Account</item>
+        <item>Vendors</item>
+        <item>Logout</item>
+    </string-array>
 </resources>
